--- a/bib/lib.bib
+++ b/bib/lib.bib
@@ -33,4 +33,11 @@
   howpublished = {\url{http://www.education.rec.ri.cmu.edu/previews/nxt_products/robotics_eng_vol_1/preview/content/reference/helpers/ultrasonic.htm}}
 }
 
+@MISC{NXTStats,
+  author = {Brian Nielsen},
+  title = {{Embedded Systems Hardware}},
+  year = {2016},
+  note = {Seen 18/10/2016},
+  howpublished = {\url{https://www.moodle.aau.dk/pluginfile.php/837266/mod_resource/content/2/embedded-hardware-and-sensoractuators.pdf}}
+}
 
