--- a/sections/Analyse/PlatformChoice.tex
+++ b/sections/Analyse/PlatformChoice.tex
@@ -37,8 +37,8 @@ of:
 
 The Lego NXT comes with the NXT-G programming environment which is a visual
 programming language for use with the NXT platform. There exist a variety of
-unofficial programming languages for the NXT, so in practice it is possible to
-write programs in pretty much all the big programming languages.
+unofficial programming languages for the NXT which makes it possible to use the
+write programs using the more popular programming languages.
 
 \begin{itemize}
   \item The external peripherals come programmed and assembled - all the user
