--- a/sections/Requirements/ProblemDomain.tex
+++ b/sections/Requirements/ProblemDomain.tex
@@ -98,8 +98,8 @@ topic:
 \end{enumerate}
 
 Three distinct phases were identified, ``Scanning", ``Tracking'' and
-``Shooting''. Each phase was analysed in order to find the problems
-associated with it. These problems are then used as the foundtion for the
-analysis. In the next chapter we will examine the what an embedded system is,
-what makes a real-time system and how machine intelligence will integrate with
-the project.
+``Shooting''. Each phase was analysed in order to find the problems associated
+with it. These problems which are mechanical, real-time and reasoning based
+problems are used as the foundation for the analysis. In the next chapter
+we will examine the what an embedded system is, what makes a real-time system
+and how machine intelligence will integrate with the project.
