--- a/sections/Requirements/Requirements.tex
+++ b/sections/Requirements/Requirements.tex
@@ -1,7 +1,7 @@
 \section{Requirements}
 
-Based on \fix{\ldots}{we need to base it on problem statement or somethign
-like that}, we can determine the requirements for an autonomous turret.
+Based on\ldots, we can determine the requirements for an autonomous
+turret.
 These requirements can further be divided into the groups ``Need to have'' and
 ``Nice to have'' in order to prioritize between them.
 
@@ -23,10 +23,6 @@ The following requirements have been deemed necessary for an autonomous turret:
   \item The turret needs to be able to search for targets, as otherwise it would
   have to wait for a target to move into its line of sight. This would limit
   the window of time the turret has in order to hit the target.
-  \item \fix{The turret needs to be able to track a target in order to collect
-  information, such as the speed and direction of the target. This is necessary
-  as the turret needs some information in order to determine when and where to
-  fire at.}{Sounds alot like a other item in the list}
   \item The turret should have a maximum firing range of atleast 250cm. This
   number is determined by the maximum sensor range as well as the maximum of
   the design. It can be argued that it could be useful to shoot further than
@@ -39,10 +35,9 @@ The following requirements have been deemed necessary for an autonomous turret:
   \item The turret needs to be able to predict where the target will be at a given point
 in time. This is necessary as it would otherwise be very unlikely that the
 turret would be able to hit the target.
-  \item \fix{The turret needs to be able to determine the direction, distance
+  \item The turret needs to be able to determine the direction, distance
   and speed of the target. This requirement is necessary as it would otherwise be impossible to
-calculate and predict where the target will be.}{Sounds alot like a other item
-in the list}
+calculate and predict where the target will be.
   \item The target should be atleast \fix{10cm*10cm}{what is the optimal size?}, as it
 would otherwise be too small to be reliably seen by the turret sensors.
   \item The target is able to move at a constant speed of up to 0.8m/s. In order to
@@ -69,8 +64,10 @@ amount of targets hit.
 \end{itemize}
 
 \section{Another version of the requirements}
-This is a second take on the requirements due to a different ideas on how
-requirements should be written.\nl
+Dette er en hurtig sketch af en anden maade at skrive kravene ned paa. Der var
+delte meninger om hvordan vi burde skrive vores kravspec. Saa her er en
+anden version der er mere hvad er der og mindre hvorfor:\nl
+
 
 The turret needs to be able to observe an area. The length of the area is 250cm
 since this is the max range that our sensors function at. The turret will be
