--- a/sections/Sensors/sensorTheory.tex
+++ b/sections/Sensors/sensorTheory.tex
@@ -1,4 +1,4 @@
-\chapter{Sensor Theory} 
+\chapter{Sensor Theory}\label{SensorTheory}
 \section{Ultrasonic Sensor}
 The ultrasonic sensor works by producing sound waves from one of the two
 frontal holes. The sound wave is then bounced back by an object and received by
@@ -14,13 +14,12 @@ There is a delay of 25ms at how often it can be used to determine the distance
 to an object. Anything faster than that and the results become very imprecise
 \Source.
 
-\section{Infrared Sensor}
-The infrare sensor works on the same basic prinicple as the ultrasonic sensor,
-insted of it using sound it uses infrared light, and mesures the intensitivit of
-the light reflected by the object infront of the sensor, if there no reflected
-light are then no object is infront of the sensor and if the amount of reflected
-light is high then the object is close to the sesnor \Source.
-
+% \section{Infrared Sensor}
+% The infrare sensor works on the same basic prinicple as the ultrasonic sensor,
+% insted of it using sound it uses infrared light, and mesures the intensitivit of
+% the light reflected by the object infront of the sensor, if there no reflected
+% light are then no object is infront of the sensor and if the amount of reflected
+% light is high then the object is close to the sesnor \Source.
 
 % En infrarød sensor virker
 % på samme princip som ultra sonic sensor, her er det så i stedet for at måle hvor lang tid der går, så gør den brug af intentiviten af
