--- a/setup/chapters.tex
+++ b/setup/chapters.tex
@@ -7,6 +7,7 @@
 \input{sections/Analyse/SystemDescription/RTS.tex}
 \input{sections/Analyse/SystemDescription/Conclusion.tex}
 \input{sections/Analyse/PlatformChoice.tex}%NXT v. Arduino
+\input{sections/Sensors/Sensors.tex}
 
 \input{sections/HWSelection/Sensors/SensorTest.tex}
 %	Test of sensors
