--- a/sections/Sensors/Sensors.tex
+++ b/sections/Sensors/Sensors.tex
@@ -8,3 +8,4 @@ sensors, this chapter will be used to explain, analyze and test the different
 sensors which will be used for this project.
 
 \input{sections/Sensors/sensorTheory.tex} 
+\input{sections/Sensors/SensorTest.tex}
